--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "next": "15.4.4",
+    "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-markdown": "^10.1.0"
+    "react-hook-form": "^7.63.0",
+    "react-markdown": "^10.1.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "i": "^0.3.7",
     "typescript": "^5"
   }
 }
