fix : height card process to small mobile

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -5,7 +5,7 @@
       "image" : "/images/projects/EFFCA.webp",
       "type" : "Voir le site",
       "synopsis" : "Site web pour le club de football du village de Fons",
-      "web" : "https://effca.vercel.app/"
+      "web" : "https://effca.fr/"
 
     },
     {
